# IRC_Chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/implementation/: answer.py  ingest.py
app/notebooks/: README.md  answer.ipynb  ingest.ipynb
